--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "pretest": "npm run lint",
     "test": "cross-env MONGODB_VERSION=${MONGODB_VERSION:=3.2.6} MONGODB_STORAGE_ENGINE=mmapv1 TESTING=1 jasmine",
     "coverage": "cross-env MONGODB_VERSION=${MONGODB_VERSION:=3.2.6} MONGODB_STORAGE_ENGINE=mmapv1 TESTING=1 nyc jasmine",
-    "start": "node index.js",
+    "start": "node ./bin/parse-server",
     "prepublish": "npm run build"
   },
   "engines": {
